0.4.0/_sources/cpp_api/runtime/llmRuntimeUtils.rst.txt
LLM Runtime Utils
=================

.. doxygenstruct:: trt_edgellm::rt::Message
   :project: TensorRT Edge-LLM
   :members:
   :undoc-members:

.. doxygenstruct:: trt_edgellm::rt::Message::MessageContent
   :project: TensorRT Edge-LLM
   :members:
   :undoc-members:

.. doxygenstruct:: trt_edgellm::rt::LLMGenerationRequest
   :project: TensorRT Edge-LLM
   :members:
   :undoc-members:

.. doxygenstruct:: trt_edgellm::rt::LLMGenerationResponse
   :project: TensorRT Edge-LLM
   :members:
   :undoc-members:

.. doxygenstruct:: trt_edgellm::rt::LongRopeParams
   :project: TensorRT Edge-LLM
   :members:
   :undoc-members:

.. doxygenstruct:: trt_edgellm::rt::RopeConfig
   :project: TensorRT Edge-LLM
   :members:
   :undoc-members:

.. doxygenfunction:: trt_edgellm::rt::formatRopeConfig
   :project: TensorRT Edge-LLM

.. doxygenfunction:: trt_edgellm::rt::collectRopeConfig
   :project: TensorRT Edge-LLM

.. doxygenfunction:: trt_edgellm::rt::initializeRopeCosSinCache
   :project: TensorRT Edge-LLM

.. doxygenfunction:: trt_edgellm::rt::initializeLongRopeCosSinCache
   :project: TensorRT Edge-LLM

.. doxygenfunction:: trt_edgellm::rt::compactVector
   :project: TensorRT Edge-LLM

.. doxygenfunction:: trt_edgellm::rt::buildBatchMapping
   :project: TensorRT Edge-LLM

